syntax = "proto3";

package yandex.cloud.priv.baas.v1;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/baas/v1;baas";

message Resource {
    string compute_instance_id = 1;

    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;

    bool online = 4;
    bool enabled = 5;
}

message Progress {
    int64 current = 1;
    int64 total = 2;
}

message Task {
    enum Type {
        TYPE_UNSPECIFIED = 0;
        BACKUP = 1;
        RETENTION = 2;
        RECOVERY = 3;
    }

    enum Status {
        STATUS_UNSPECIFIED = 0;
        ENQUEUED = 1;
        ASSIGNED = 2;
        STARTED = 3;
        PAUSED = 4;
        COMPLETED = 5;
    }

    int64 id = 1;
    bool cancellable = 2;
    string policy_id = 3;
    Type type = 4;
    Progress progress = 5;
    Status status = 6;
    
    google.protobuf.Timestamp enqueued_at = 7;
    google.protobuf.Timestamp started_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    google.protobuf.Timestamp completed_at = 10;

    string compute_instance_id = 11;
}
